--- a/sales_admin_submission/Gemfile
+++ b/sales_admin_submission/Gemfile
@@ -8,10 +8,16 @@ gem 'coffee-rails', '~> 4.1.0'
 gem 'jquery-rails'
 gem 'jbuilder', '~> 2.0'
 gem 'sdoc', '~> 0.4.0', group: :doc
+gem 'database_cleaner'
 
 group :development, :test do
+  gem 'rspec-rails'
   gem 'pry'
   gem 'pry-rails'
+  gem 'capybara'
+  gem 'launchy'
+  gem 'mocha'
+  gem 'shoulda-matchers'
 end
 
 group :development do
